--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -8,17 +8,14 @@
     </head>
     
     <body>
-        <h1>Rango says...</h1>
+        <div>This tutorial has been put together by Cristina Negulescu<div>
         
-        <div>
-            hey there partner! <br />
-            <strong>{{ boldmessage }}</strong><br />
-        </div>
+        
         
         <div>
 
-            <img src="{% static "images/rango.jpg" %}"
-                 alt="Picture of Rango" /> <!-- New line -->
+            <img src="{{ MEDIA_URL}}cat.jpg"  
+                 alt="Picture of a cat" /> <!-- New line -->
         </div>
     </body>
     
