--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -26,6 +26,21 @@
             <strong>There are no categories present.</strong>
         {% endif %}
         </div>
+		<h3>Most Viewed Pages</h3>
+        <div>
+            {% if pages %}
+            <ul>
+                {% for page in pages %}
+                    <li>
+                        <a href="{{ page.url }}">{{ page.title }}</a>
+                    </li>
+                {% endfor %}
+            </ul>
+            {% else %}
+                <strong>There are no pages present.</strong>
+            {% endif %}
+        </div>
+
         
         <div>
             <a href="/rango/about/">About Rango</a><br />
