--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -23,6 +23,7 @@
     </div>
     <div>
         <a href="/rango/">Back to Index</a>
+		<a href="/rango/category/{{category.slug}}/add_page/">Add Page</a> <br/>
     </div>
 </body>
 </html>
