--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -1,13 +1,9 @@
-<!DOCTYPE html>
+{% extends "rango/base.html" %}
+{% load static %}
 
-{% load staticfiles %} <!-- New line -->
-
-<html>
-    <head>
-        <title>Rango</title>
-    </head>
-    
-    <body>
+{% block title %}About{% endblock %}
+  
+{% block body_block %}
         <div>This tutorial has been put together by Cristina Negulescu<div>
         
         
@@ -17,6 +13,4 @@
             <img src="{{ MEDIA_URL}}cat.jpg"  
                  alt="Picture of a cat" /> <!-- New line -->
         </div>
-    </body>
-    
-</html>
+{% endblock %}
