--- a/templates/rango/add_page.html
+++ b/templates/rango/add_page.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Rango</title>
-    </head>
+{% extends "rango/base.html" %}
 
-    <body>
+{% block title %}Add a Page{% endblock %}
+  
+{% block body_block %}
         <h1>Category {{ category_name }} &ndash; Add a Page</h1>
 
         <form id="category_form" method="post" action="/rango/category/{{ category.slug }}/add_page/">
@@ -22,5 +20,4 @@
 
             <input type="submit" name="submit" value="Add Page" />
         </form>
-    </body>
-</html>
+{% endblock %}
