--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -1,29 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Rango</title>
-</head>
-<body>
-    <div>
-        {% if category %}
-            <h1>{{ category.name }}</h1>
-            {% if pages %}
-                <ul>
-                    {% for page in pages %}
-                        <li><a href="{{ page.url }}">{{ page.title }}</a></li>
-                    {% endfor %}
-                </ul>
-            {% else %}
-                <strong>No pages currently in category.</strong>
-            {% endif %}
+{% extends 'rango/base.html' %}
+{% load staticfiles %}
+
+{% block title_block %}
+    {{ category.name }}
+{% endblock %}
+
+{% block body_block %}
+    {% if category %}
+        <h1>{{ category.name }}</h1>
+        
+        {% if pages %}
+            <ul>
+            {% for page in pages %}
+                <li><a href="{{ page.url }}">{{ page.title }}</a></li>
+            {% endfor %}
+            </ul>
         {% else %}
-            The specified category does not exist!
+            <strong>No pages currently in category.</strong>
         {% endif %}
-    </div>
-    <div>
-        <a href="/rango/">Back to Index</a>
-		<a href="/rango/category/{{category.slug}}/add_page/">Add Page</a> <br/>
-    </div>
-</body>
-</html>
+        <a href="{% url 'add_page' category.slug %}">Add a Page</a>
+    {% else %}
+        The specified category does not exist!
+    {% endif %}
+{% endblock %}
