--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,11 +1,9 @@
-<!DOCTYPE html>
-{% load staticfiles %}
-<html>
-    <head>
-        <title>Rango</title>
-    </head>
-    
-    <body>
+
+{% extends "rango/base.html" %}
+{% load static %}
+{% block title %}Index{% endblock %}
+  
+{% block body_block %}
         <h1>Rango says...</h1>
         
         <div>
@@ -43,9 +41,7 @@
 
         
         <div>
-            <a href="/rango/about/">About Rango</a><br />
-			<a href="/rango/add_category/">Add a New Category</a><br />
-            <img src="{% static "images/rango.jpg" %}" alt="Picture of Rango" /> 
+           
+           <img src="{% static "images/rango.jpg" %}" alt="Picture of Rango" />  
         </div>
-    </body>
-</html>
+{% endblock %}
