--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,6 +1,7 @@
 
+
 {% extends "rango/base.html" %}
-{% load static %}
+{% load staticfiles %}
 {% block title %}Index{% endblock %}
   
 {% block body_block %}
@@ -41,7 +42,7 @@
 
         
         <div>
-           
-           <img src="{% static "images/rango.jpg" %}" alt="Picture of Rango" />  
+            
+            <img src="{% static "images/rango.jpg" %}" alt="Picture of Rango" /> 
         </div>
 {% endblock %}
