--- a/templates/rango/add_page.html
+++ b/templates/rango/add_page.html
@@ -5,7 +5,7 @@
 {% block body_block %}
         <h1>Category {{ category_name }} &ndash; Add a Page</h1>
 
-        <form id="category_form" method="post" action="/rango/category/{{ category.slug }}/add_page/">
+        <form id="category_form" method="post" action="/rango/category/{{ category.slug }}/add_page/"novalidate>
 
             {% csrf_token %}
             {% for hidden in form.hidden_fields %}
