--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -9,7 +9,7 @@
         
         
         <div>
-
+            <p> visits: {{ visits }}</p>
             <img src="{{ MEDIA_URL}}cat.jpg"  
                  alt="Picture of a cat" /> <!-- New line -->
         </div>
