--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -14,7 +14,8 @@
                 hey there partner!
             {% endif %}
         </div>
-        
+        <p>visits: {{ visits }}</p>
+
         
 		<h3>Most Viewed Pages</h3>
         <div>
